# Helm

./: .gitignore  .vibehub-hook-test  CLAUDE.md  DESIGN.md  Makefile  README.md  helm自动化开发流程-VibeHub落地版.md  pyproject.toml  requirements.txt  自动化开发流程研究报告.md
.claude/: settings.json
.github/workflows/: ci.yml
.vibehub/: vibehub-hook.mjs
desktop/: backend.js  loading.html  main.js  package-lock.json  package.json
desktop/test/: backend.test.js
docs/: CONVENTIONS.md  DEVELOPMENT.md  METHODOLOGY.md  loop-procedure.md  loop-prompt.md  收尾-needs-human-清单.md
docs/design/: fanbox-cockpit-parity.md  helm-cockpit-orage-themes.html  helm-loop-log.md  helm-loop-procedure.md  helm-loop-prompt.md  helm-pro.html  helm-review-backlog.md  helm-shell-all-variants.html  helm-shell-explore-2.html  helm-shell-today-variants.html
docs/prd/: 00-PRD-Master.md
docs/reports/: 2026-06-18-dev-infra-m1-conventions.md  2026-06-18-dev-infra-m2-ci.md  2026-06-18-dev-infra-m3-dev-env.md  2026-06-18-dev-infra-m4-stack.md  2026-06-19-chat-m1-providers.md  2026-06-19-chat-m2-adapters.md  2026-06-19-chat-m3-streaming.md  2026-06-19-chat-m4-frontend.md  2026-06-19-cockpit-m1-project-backend.md  2026-06-19-cockpit-m2-file-browser.md  2026-06-19-cockpit-m3-preview.md  2026-06-19-cockpit-m4-terminal.md  2026-06-19-cockpit-m5-watch-follow.md  2026-06-19-cockpit-m6-git-diff.md  2026-06-19-workspace-layout-m1-frontend-foundation.md  2026-06-19-workspace-layout-m2-three-pane.md  2026-06-19-workspace-layout-m3-command-palette.md  2026-06-19-workspace-layout-m4-capture-keymap.md  2026-06-19-workspace-layout-m5-today-context.md  2026-06-27-agent-orchestration-m1.md  2026-06-27-agent-orchestration-m2.md  2026-06-27-agent-orchestration-m3.md  2026-06-27-agent-orchestration-m4.md  2026-06-27-agent-orchestration-roomclose.md  2026-06-27-backlog-drain-1.md  2026-06-27-backlog-drain-2.md  2026-06-27-backlog-drain-3.md  2026-06-27-backlog-drain-4.md  2026-06-27-backlog-drain-5.md  2026-06-27-deep-research-m1.md  2026-06-27-deep-research-m2.md  2026-06-27-deep-research-m3.md  2026-06-27-deep-research-m4.md  2026-06-27-deep-research-m5.md  2026-06-27-deep-research-roomclose.md  2026-06-27-email-calendar-m1.md  2026-06-27-email-calendar-m2.md  2026-06-27-email-calendar-m3.md  2026-06-27-email-calendar-m4.md  2026-06-27-email-calendar-m5.md  (+15 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  App.test.ts  app.css  main.ts
helm/: __init__.py  __main__.py  app.py  backup.py  config.py  crypto.py  db.py  middleware.py  models.py  server.py  settings.py
helm/calendar/: __init__.py  caldav.py  ics.py  models.py  routes.py  service.py
helm/chat/: __init__.py  adapters.py  models.py  routes.py  service.py  sessions.py
helm/cockpit/: __init__.py  git.py  models.py  preview.py  routes.py  service.py  terminal.py  watcher.py
helm/mail/: __init__.py  imap.py  models.py  routes.py  service.py  triage.py
helm/mcp/: __init__.py  __main__.py  client.py  server.py
notch/: Package.swift  README.md  package.sh
packaging/: build-app.sh  helm-backend.spec  helm_backend.py
scripts/: bootstrap.sh
tests/: conftest.py  test_acp.py  test_backup.py  test_caldav_sync.py  test_calendar.py  test_chat.py  test_cockpit.py  test_config.py  test_crypto.py  test_db.py  test_file_changes_cap.py  test_frontend.py  test_health.py  test_mail.py  test_mail_triage.py  test_mcp.py  test_memory.py  test_memory_vector.py  test_notes.py  test_orchestration.py  test_rag.py  test_research.py  test_research_export.py  test_research_providers.py  test_research_ws.py  test_security.py  test_session.py  test_settings_api.py  test_setup.py  test_skills.py  test_tasks.py  test_tasks_exec.py
(+180 files in other folders)
