[project]
name = "helm"
version = "0.0.1"
description = "Helm — local-first personal AI workspace (coding cockpit + AI brain)."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "cryptography",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",  # required by Starlette's TestClient
]
packaging = [
    "pyinstaller",  # builds the self-contained backend sidecar (m6)
]

[project.scripts]
helm = "helm.server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
