[project]
name = "helm"
version = "0.0.1"
description = "Helm — local-first personal AI workspace (coding cockpit + AI brain)."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "cryptography",
    "python-multipart",
    "watchdog",
    "httpx",
    # memory-rag-skills: the brain's vector store + embedder (constraint
    # 8ace2b3a — reuse Odysseus's ChromaDB + fastembed ONNX stack). fastembed
    # downloads its ONNX model on first embed; the runtime degrades to
    # keyword-only recall when the vector store can't initialize.
    "chromadb",
    "fastembed",
    # memory-rag-skills m4: document text extraction for RAG indexing. Both are
    # light, pure-ish Python; extraction degrades gracefully if either is absent.
    "pypdf",
    "python-docx",
    # memory-rag-skills m6: MCP server exposing memory/RAG to the terminal agent.
    "mcp",
    # journal-notes-tasks m4: cron schedule parsing for scheduled tasks.
    "croniter",
    # email-calendar: CalDAV bidirectional calendar sync (intent#2).
    "caldav",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",  # required by Starlette's TestClient
]
packaging = [
    "pyinstaller",  # builds the self-contained backend sidecar (m6)
]

[project.scripts]
helm = "helm.server:run"
# memory-rag-skills m6: stdio MCP server Claude Code launches (.mcp.json).
helm-mcp = "helm.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
